# asparagus

./: .gitignore  EvalBox.md  README.md  environment_on_gefion.md  hacking_asparagus.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml  deploy_from_open.yaml  deploy_to_open.yaml  docs.yaml  pipeline_tests.yml  stale.yaml
EvalBox/: index.html
advanced/: common_issues.md  hacking_asparagus.md
advanced/common_issues/: index.html
advanced/hacking_asparagus/: index.html
advanced/training_times/: index.html
asparagus/: finetune.py  paths.py  plugin.py  pretrain.py  train.py
asparagus/docs/: training_times.md
asparagus/functional/: __init__.py  collate.py  data_splitting.py  decorators.py  huggingface.py  loading.py  lr_scheduling.py  pos_embed.py  reverse_preprocessing.py  scheduling.py  utils.py  versioning.py  visualization.py
asparagus/functional/metrics/: distribution.py  features.py  loss.py  masking.py  performance.py  reconstruction.py  stability.py  utils.py  visualization.py
asparagus/functional/task_conversion_and_preprocessing/: __init__.py  detect.py  metadata_generation.py  mp.py  process_case.py  utils.py
asparagus/modules/callbacks/: __init__.py  loggers.py  prediction_writer.py  profiler.py  ssl_training.py
asparagus/modules/data_modules/: __init__.py  pretraining.py  training.py
asparagus/modules/dataclasses/: __init__.py  file_management_version_control.py  hardware.py  nested_dataclasses.py  pathing.py  preprocessing.py  training.py  versioning.py
asparagus/modules/datamodules/: PretrainModule.py
asparagus/modules/datasets/: PretrainDataset.py  TrainDataset.py
asparagus/modules/lightning_modules/: SelfSupervisedModel.py  __init__.py  base_module.py  classification_module.py  clsreg_module.py  dinov2.py  linear_probe_module.py  segmentation_module.py  self_supervised.py
asparagus/modules/losses/: dinov2.py  ibot.py
asparagus/modules/networks/: dinov2.py  primus.py  resenc_unet.py  unet.py  vision_transformer.py
asparagus/modules/transforms/: DinoV2.py  __init__.py  blockmask.py  clamp.py  composed_transforms.py  crop.py  masking.py  normalize.py  pad.py
asparagus/notebooks/: Test augmentations.ipynb  model_sizes.ipynb  padding.ipynb  test_downsample_label.ipynb  ttUnet_pp_comparison.ipynb
asparagus/notebooks/debug/: hydracfgs.ipynb
asparagus/pipeline/auto_configuration/: __init__.py  checkpoint.py  configurators.py  experiment_setup.py  logging.py  versioning.py
asparagus/pipeline/configs/: pretrain.yaml
asparagus/pipeline/managers/: PretrainManager.py
asparagus/pipeline/run/: eval_box.py  finetune.py  finetune_cls.py  finetune_reg.py  finetune_seg.py  get_id.py  linear_probe.py  pretrain.py  split.py  task_conversion.py  test_cls.py  test_seg.py  train.py  train_cls.py  train_reg.py  train_seg.py
asparagus/pipeline/shell/: lsf.sh
asparagus/pipeline/task_conversion/: Task000_OASISTest.py  Task000_TEMPLATE.py  Task001_ABIDE1.py  Task001_OASIS.py  Task002_OpenMind.py  Task003_OASIS3.py  Task004_A4LEARN.py  Task005_MU_GLIOMA_POST.py  Task005_NIFD.py  Task006_OASIS4.py  (+35 more)
asparagus/scripts/: find_pip_version.bash  find_run_from_id.bash  get_nnunet_resenc_plans_and_network.py  make_scratch_split.py  single_subject_inference.py  submit_lsf.sh  submit_slurm.sh  test.md  test_sampler.py
assets/css/: copy-code-button.css
assets/js/: copy-code-button.js
common_issues/: index.html
configs/: default_finetune_cls.yaml  default_finetune_reg.yaml  default_finetune_seg.yaml  default_linear_probe.yaml  default_predict.yaml  default_pretrain.yaml  default_test.yaml  default_train_cls.yaml  default_train_reg.yaml  default_train_seg.yaml  index.html
configs/core/: base.yaml  box.yaml  test.yaml
configs/evaluation/: dev_box.yaml  dev_box_dtu.yaml
configs/hardware/: 1gpu12cpu.yaml  1gpu40cpu.yaml  1node8gpus.yaml  2gpus.yaml  2nodes2gpus.yaml  cpu.yaml  osx.yaml
configs/model/: dinov2_test.yaml  primus_m.yaml  primus_s.yaml  resenc_unet_b.yaml  unet_b_lw_dec.yaml  unet_m.yaml  unet_s.yaml  unet_tiny.yaml
configs/plugins/: main_segmentation.yaml
data-pipeline/: data_structure.md  preprocessing.md
data-pipeline/data_structure/: index.html
data-pipeline/preprocessing/: index.html
docs/: common_issues.md  configs.md  environment_variables.md  index.md
docs/advanced/: training_times.md
docs/getting-started/: environment_variables.md  install.md
docs/project/: about.md  contributing.md
docs/training-workflows/: pretraining.md  regression.md  segmentation.md
environment_on_gefion/: index.html
environment_variables/: index.html
evaluation/evalbox/: index.html
examples/: EvalBoxResults.yaml
getting-started/environment_on_gefion/: index.html
getting-started/environment_variables/: index.html
getting-started/install/: index.html
hacking_asparagus/: index.html
installation/: index.html
project/about/: index.html
project/contributing/: index.html
search/: search_index.json
tests/: conftest.py  import_test.py  test_dinov2_vit_x.py  test_finetune_seg.py  test_linear_probe.py  test_pretrain.py  test_test_cls.py  test_train_reg.py
training-workflows/: classification.md  cross_dataset.md
training-workflows/classification/: index.html
training-workflows/configs/: index.html
training-workflows/cross_dataset/: index.html
training-workflows/pretraining/: index.html
training-workflows/regression/: index.html
training-workflows/segmentation/: index.html
training_times/: index.html
(+65 files in other folders)
