[project]
name = "asparagus"
version = "0.0.1"
authors = [
  { name="Sebastian Llambias", email="llambias@live.com" },
]
description = "Yucca-spinoff for foundation model training"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License 2.0",
    "Operating System :: OS Independent",
]
keywords = ['deep learning', 'medical image analysis','foundation models']

dependencies = [
    "batchgenerators>=0.25",
    "numpy>=2.2.5",
    "torch>=2.6.0",
    "yucca @ git+https://github.com/Sllambias/yucca.git@blur_transform",
    "hydra-core>=1.3.2",
    "torchmetrics>=1.7.2",
]

[project.scripts]
asp_tc = 'asparagus.pipeline.run.task_conversion:main'
asp_getid = 'asparagus.pipeline.run.get_id:main'
asp_pretrain = 'asparagus.pipeline.run.pretrain:main'
asp_train = 'asparagus.pipeline.run.pretrain:main'
asp_finetrain = 'asparagus.pipeline.run.pretrain:main'

[project.optional-dependencies]
test = [
    'pytest>=8.3.5',
    'flake8>=7.2.0',
    'black>=25.1.0',
]

[project.urls]
"Homepage" = "https://github.com/sllambias/asparagus"

[build-system]
requires = ["setuptools>=75.8", "wheel>=0.45"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127

